www/css/course.css
/* ... */
.courses1{margin-left:none}
.courses2{margin-left:none}
.courses3{margin-left:none}

.shelfholder_mb_lt, .shelfholder_mb_land_lt, .shelfholder_mb_land_rt, .shelfholder_mb_rt{display:none}

/*-------------------------------------------------------------Shelf Ends Here---------------------------------------------------------------*/

@media handheld, only screen and (max-width: 1024px){
	
	.offmaradj{margin-left:340px;}
	.pg_hdrs a{margin-right:0}
	.shelfholder_mb_lt, .shelfholder_mb_land_lt, .shelfholder_mb_land_rt, .shelfholder_mb_rt{display:none}
	.acc_holder {width: 100%}
	.acc_tilebx{width:89%}
	 .acc_tilebx ul li{margin:0 12px 26px}	
        	
}


@media handheld, only screen and (max-width: 800px){
	
	.shelfholder2{height:183px; background:url("../images/course_shelf3_ipad.png") no-repeat left bottom; width:635px}
	.courses1{margin-left:25px}
	.courses2{margin-left:5px}
	.courses3{margin-left:38px}
	.courses ul li{padding-left:0px; margin-left:20px}
	.ribbon{left:0}
	.offmaradj{margin-left:87px;}
	/*.shelfholder{padding-top:92px}*/
	.pg_hdrs a{margin-right:9.4%}
	.shelfholder_mb_rt, .shelfholder_mb_land_lt, .shelfholder_mb_land_rt, .shelfholder_mb_lt{display:none}
	.acc_tilebx { width: 93%;}	

	.acc_contntbg{background:url("../images/accordian_hdng_shw_768.png") no-repeat center top;}
}

@media handheld, only screen and (max-width: 768px){
	
	.shelfholder2{height:183px; background:url("../images/course_shelf3_ipad.png") no-repeat left bottom; width:635px}
	.courses1{margin-left:25px}
	.courses2{margin-left:5px}
	.courses3{margin-left:38px}
	.courses ul li{padding-left:0px; margin-left:20px}
	.ribbon{left:0}
	.offmaradj{margin-left:87px;}
	/*.shelfholder{padding-top:92px}*/
	.pg_hdrs a{margin-right:9.4%}
	.shelfholder_mb_rt, .shelfholder_mb_land_lt, .shelfholder_mb_land_rt, .shelfholder_mb_lt{display:none}
	.acc_tilebx { width: 97%;}	
      
	.acc_contntbg{background:url("../images/accordian_hdng_shw_768.png") no-repeat center top;}
}

@media handheld, only screen and (max-width: 767px){	
	.acc_tilebx { width: 78%;}		
        
	.offmaradj {margin-left: 9px}
.shelfholder_mb_rt{display:block; height:174px; background:url("../images/course_shelf1_ipad.png") no-repeat left bottom; width:189px; float:right; padding-top:39px; margin-right:5%}
.shelfholder_mb_lt{display:block; height:174px; background:url("../images/course_shelf1_ipad.png") no-repeat left bottom; width:90%; float:left; padding-top:39px; margin-left:5%}	
.shelfholder2,.shelfholder3{display:none;}	
.mbshelfhldr{width:80%; margin:auto}
.courses ul li {margin-left: 20px; padding-left:0}
.single_book{display:none;}
.acc_tilebx ul { width:68%; margin:0 auto;}
}




@media handheld, only screen and (max-width: 640px) {
	

.acc_tilebx {width: 84.7%}
.courses2{margin-left:25px}
.shelfholder2,.shelfholder3{display:none;}	
.shelfholder{padding-top:40px;}
.acc_contntbg{background:url("../images/accordian_hdng_shw_480.png") no-repeat center top;}
.single_book{display:none;}
}


@media handheld, only screen and (max-width: 600px) {
	
.acc_tilebx {width: 61.8%}

.courses2{margin-left:25px}
.shelfholder2,.shelfholder3{display:none;}	
.shelfholder{padding-top:40px;}
.acc_contntbg{background:url("../images/accordian_hdng_shw_480.png") no-repeat center top;}
.single_book{display:none;}
}

@media handheld, only screen and (max-width: 568px) {
	
.acc_tilebx {width: 332px}
.acc_tilebx ul li {margin: 0 14px 28px}
.courses2{margin-left:25px}
.shelfholder2,.shelfholder3{display:none;}	
.shelfholder{padding-top:40px;}
.acc_contntbg{background:url("../images/accordian_hdng_shw_480.png") no-repeat center top;}
.single_book,.shelfholder #single_book{display:none}
}

@media handheld, only screen and (max-width: 550px) {
.courses2{margin-left:25px}
.shelfholder2,.shelfholder3{display:none;}	
.shelfholder{padding-top:40px;}
.acc_contntbg{background:url("../images/accordian_hdng_shw_480.png") no-repeat center top;}
.single_book,.shelfholder #single_book{display:none}
.accordion-inner .acc_tilebx ul { width:100%;}
}



@media handheld, only screen and (max-width: 480px) {
	
.acc_tilebx { width: 77.6%;}
.courses2{margin-left:25px}
.shelfholder2,.shelfholder3{display:none;}	
.shelfholder{padding-top:40px;}
.acc_contntbg{background:url("../images/accordian_hdng_shw_480.png") no-repeat center top;}
.single_book,.shelfholder #single_book{display:none}
.acc_tilebx ul li {margin: 0 14px 28px}
}


@media handheld, only screen and (max-width: 385px) {
	
.acc_tilebx { width: 138px;}
.acc_tilebx ul li {margin: 0 auto 28px}
.shelfholder{padding-top:40px;}
.shelfholder2,.shelfholder3,.shelfholder_mb_land_rt, .shelfholder_mb_land_lt{display:none}
.shelfholder_mb_rt{display:block; height:174px; background:url("../images/course_shelf1_ipad.png") no-repeat left bottom; width:189px; float:right; padding-top:39px}
.shelfholder_mb_lt{display:block; height:174px; background:url("../images/course_shelf1_ipad.png") no-repeat left bottom; width:189px; float:left; padding-top:39px}
.acc_contntbg{background:url("../images/accordian_hdng_shw_320.png") no-repeat center top;}
.single_book,.shelfholder #single_book{display:none}
}

@media handheld, only screen and (max-width: 360px) {
	
.shelfholder{padding-top:40px;}
.shelfholder2,.shelfholder3,.shelfholder_mb_land_rt, .shelfholder_mb_land_lt{display:none}
.shelfholder_mb_rt{display:block; height:174px; background:url("../images/course_shelf1_ipad.png") no-repeat left bottom; width:189px; float:right; padding-top:39px}
.shelfholder_mb_lt{display:block; height:174px; background:url("../images/course_shelf1_ipad.png") no-repeat left bottom; width:189px; float:left; padding-top:39px}
.acc_contntbg{background:url("../images/accordian_hdng_shw_320.png") no-repeat center top;}
.acc_topic{	font-size:20px;}
.single_book,.shelfholder #single_book{display:none}

}
/* ... */

